Prevent auto-zoom on mobile device input elements.

--- a/src/assets/css/frontend.css
+++ b/src/assets/css/frontend.css
@@ -301,6 +301,11 @@ body {
     outline: none;
 }
 
+
+select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"] { font-size: 16px !important; }
+
+.select2-container--bootstrap .select2-search--dropdown .select2-search__field {font-size: 16px}
+
 /* BOOK SUCCESS & MESSAGE
    ------------------------------------------------------------------------- */
 #message-frame,
